Docs fixes: 2
